--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: 'Rubik', sans-serif;
+  @apply dark:text-gray-100 text-gray-800;
 }
 
 button {
@@ -13,6 +14,15 @@ button {
 material-symbols-outlined {
   color: white;
 }
+
+th {
+  @apply p-3;
+}
+
+textarea {
+  @apply resize-none w-full overflow-hidden break-words rounded-lg border p-2 focus:outline-none;
+}
+
 
 .category-button {
   position: relative;
