--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,3 +49,25 @@ textarea {
   transition: opacity 0.2s;
   font-size: 24px;
 }
+
+input {
+  @apply mt-1 block w-full px-3 py-2 border border-gray-300 dark:border-gray-700 rounded-lg shadow-sm focus:outline-none focus:border-blue-600 dark:focus:border-blue-700 sm:text-sm dark:bg-gray-800 dark:text-gray-200;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset;
+  -webkit-text-fill-color: #1e2939;
+  background-clip: content-box;
+}
+
+.dark input:-webkit-autofill,
+.dark input:-webkit-autofill:hover,
+.dark input:-webkit-autofill:focus,
+.dark input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #1e2939 inset;
+  -webkit-text-fill-color: #f3f4f6;
+  background-clip: content-box;
+}
