--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,7 +51,21 @@ textarea {
 }
 
 input {
-  @apply mt-1 block w-full px-3 py-2 border border-gray-300 dark:border-gray-700 rounded-lg shadow-sm focus:outline-none focus:border-blue-600 dark:focus:border-blue-700 sm:text-sm dark:bg-gray-800 dark:text-gray-200;
+  @apply mt-1 block w-full px-4 py-2 border border-gray-300 dark:border-gray-700 rounded-lg shadow-sm focus:outline-none focus:border-blue-600 dark:focus:border-blue-700 sm:text-sm dark:bg-gray-800 dark:text-gray-200;
+  
+}
+
+select {
+  @apply mt-1 block w-full px-4 py-2 border border-gray-300 dark:border-gray-700 rounded-lg shadow-sm focus:outline-none focus:border-blue-600 dark:focus:border-blue-700 sm:text-sm dark:bg-gray-800 dark:text-gray-200;
+  
+  
+  @apply appearance-none bg-no-repeat bg-right;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='%23FFFFFF'%3E%3Cpath d='M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z'/%3E%3C/svg%3E");
+  background-position: right 0.5rem center;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
 }
 
 input:-webkit-autofill,
