--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -55,6 +55,10 @@ input {
   
 }
 
+input:disabled {
+  @apply bg-white shadow-none dark:bg-gray-900;
+}
+
 select {
   @apply mt-1 block w-full px-4 py-2 border border-gray-300 dark:border-gray-700 rounded-lg shadow-sm focus:outline-none focus:border-blue-600 dark:focus:border-blue-700 sm:text-sm dark:bg-gray-800 dark:text-gray-200;
   
