password change added

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,36 @@ button {
   cursor: pointer;
 }
 
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: auto;
+  bottom: auto;
 
+  transform: translate(-50%, -50%);
+
+
+
+  @apply rounded-lg bg-white p-5;
+}
+
+body.modal-open {
+  overflow: hidden;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.dark .modal {
+  @apply dark:bg-gray-800;
+}
 
 th {
   @apply p-3;
