--- a/src/index.css
+++ b/src/index.css
@@ -75,12 +75,17 @@ textarea {
   font-size: 24px;
 }
 
-input {
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="date"] {
   @apply mt-1 block w-full px-4 py-2 border border-gray-300 dark:border-gray-700 rounded-lg shadow-sm focus:outline-none focus:border-blue-600 dark:focus:border-blue-700 sm:text-sm dark:bg-gray-800 dark:text-gray-200;
 
 }
 
-input:disabled {
+input[type="text"]:disabled,
+input[type="email"]:disabled,
+input[type="password"]:disabled {
   @apply bg-white shadow-none dark:bg-gray-900;
 }
 
@@ -88,7 +93,7 @@ select {
   @apply mt-1 block w-full px-4 py-2 border border-gray-300 dark:border-gray-700 rounded-lg shadow-sm focus:outline-none focus:border-blue-600 dark:focus:border-blue-700 sm:text-sm dark:bg-gray-800 dark:text-gray-200;
 
 
-  @apply appearance-none bg-no-repeat bg-right;
+  @apply appearance-none cursor-pointer bg-no-repeat bg-right;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='%231e2939'%3E%3Cpath d='M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z'/%3E%3C/svg%3E");
   background-position: right 0.5rem center;
 }
@@ -96,6 +101,15 @@ select {
 .dark select {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='%23f3f4f6'%3E%3Cpath d='M480-344 240-584l56-56 184 184 184-184 56 56-240 240Z'/%3E%3C/svg%3E");
 }
+
+select::-ms-expand {
+  appearance: none;
+  @apply cursor-pointer;
+  
+}
+
+
+
 
 input[type="date"]::-webkit-calendar-picker-indicator {
   display: none;
@@ -146,4 +160,20 @@ input:-webkit-autofill:active {
 
 .dark ::-webkit-scrollbar-thumb:hover {
   @apply bg-gray-700;
+}
+
+input[type="checkbox"] {
+  appearance: none;
+  display: block;
+  @apply w-5 h-5 border border-gray-300 rounded-md checked:bg-gray-300 dark:checked:bg-gray-700 dark:border-gray-700 focus:outline-none;
+   
+}
+
+input[type="checkbox"]:checked:before {
+  content: '✔';
+  font-size: 0.8rem;
+  color: white;
+  display: block;
+  text-align: center;
+  line-height: 1.25rem; /* Adjust this value to center the checkmark */
 }
