--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,20 @@
 body {
   font-family: 'Rubik', sans-serif;
   @apply dark:text-gray-100 text-gray-800;
+  @apply sm:text-base text-sm;
+}
 
+h2 {
+  @apply sm:text-2xl text-xl font-semibold;
 }
 
 button {
   cursor: pointer;
 }
 
+.material-symbols-outlined {
+  @apply !text-xl sm:!text-2xl leading-none ;
+}
 
 .modal {
   position: absolute;
@@ -177,3 +184,4 @@ input[type="checkbox"]:checked:before {
   text-align: center;
   line-height: 1.25rem; /* Adjust this value to center the checkmark */
 }
+
